# rlm-project

./: .gitignore  CLAUDE.md  DISCUSSION.md  README.md
rlm-orchestrator/: .gitignore  BENCHMARK_REPORT.md  Cargo.toml  TESTING.md  config-litellm-cli.toml  config-litellm.toml  config-local.toml  config-zai.toml  config.toml  config.toml.example
rlm-orchestrator/demos/: README.md  basic-error-count.sh  common.sh  large-logs-error-ranking.sh  large-logs-unique-ips.sh  war-and-peace-family-tree.sh  wasm-percentiles.sh
rlm-orchestrator/demos/l1/: error-count.sh
rlm-orchestrator/demos/l2/: error-ranking.sh  percentiles.sh  unique-ips.sh
rlm-orchestrator/demos/l4/: detective-demo.sh  family-tree.sh
rlm-orchestrator/docs/: 4-level-architecture.md  notes-custom-agent.md
rlm-orchestrator/scripts/: build-all.sh  run-benchmark-tests.sh  run-server-litellm.sh  run-server-local.sh  run-server-zai.sh  run-server.sh  start-server.sh  stop-server.sh
rlm-orchestrator/src/: codegen.rs  lib.rs  orchestrator.rs
rlm-orchestrator/src/api/: mod.rs
rlm-orchestrator/src/commands/: mod.rs
rlm-orchestrator/src/levels/: cli.rs  dsl.rs  llm.rs  mod.rs  wasm.rs
rlm-orchestrator/src/pool/: mod.rs
rlm-orchestrator/src/provider/: deepseek.rs  litellm.rs  mod.rs  ollama.rs
rlm-orchestrator/src/repl/: mod.rs
rlm-orchestrator/src/wasm/: benchmark_tests.rs  cache.rs  compiler.rs  demo_tests.rs  library.rs  mod.rs  security_tests.rs  templates.rs
rlm-orchestrator/tests/simple/: data-characters.txt  data-ips.txt  data-logs.txt  data-response-times.txt  run-all.sh  run-test.sh
(+67 files in other folders)
